eZ Online Editor 5.0 extension Changelog

5.0.4
* Fixed #15031: Unable to browse 'Images' folder on IE6 and IE7
  (Merged from trunk Rev. 87)
* Updated TinyMCE to 3.2.6
  (Merged from trunk Rev. 89)
* Fixed #14833: Cut/Copying and pasting custom-tags fails
  (Merged from trunk Rev. 91)
* Documented: #15187: Keyboard shortcuts for functions in editor toolbar
  (Merged from trunk Rev. 93)

5.0.3
* Fixed #14935: Small typo at design.ini.append.php
  (Merged from trunk Rev. 29)
* Fixed #15014: image identifier is hardcoded in upload_images.tpl
  (Merged from trunk Rev. 33)
* Implemented #14869: Different icons for ezoe buttons: 'Publish' and 'Draft'
  New store icon contributed by Russ Michell
  (Merged from trunk Rev. 35)
* Fixed #15053: Parse error in tag_custom.tpl
  (Merged from trunk Rev. 37)
* Fixed #15052: An object cannot be browsed when creating a link
  (Merged from trunk Rev. 39)
* Implemented #15139: Add support for tagging images during upload
  (Merged from trunk Rev. 44)
* Fixed: "Warning: Missing argument 1 for eZImageAliasHandler::store()" when inserting alternative text on images
  (Merged from trunk Rev. 46)
* Fixed: WebKit (Safari 4 & Chrome 2+) width problem on height resize
  (Merged from trunk Rev. 48)
* Documented: #15151: Table insert row before ...
  (Merged from trunk Rev. 50)
* Added workaround for script error on ezflow frontpages
  (Merged from trunk Rev. 52)
* Updated TinyMCE to 3.2.5
  (Merged from trunk Rev. 42)
* Update TinyMCE params so past plugin validates word html correctly and don't remove align attributes.
  (Merged from trunk Rev. 70)
* Documented: #14921: 'small' size hardcoded in ezoe code
  (Merged from trunk Rev. 77)
* Fixed #14785: Image or file upload > Sorting in location drop down
  (Merged from trunk Rev. 79)
* Fixed #14986: Unable to change embedded objects in internet explorer 6
  (Merged from trunk Rev. 82)
  
5.0.2a
* Updated TinyMCE to 3.2.4.1
  (Merged from trunk Rev. 23)