@@ -9,6 +9,8 @@ eZ Online Editor 5.0 extension Changelog
   (Merged from trunk Rev. 91)
 * Documented: #15187: Keyboard shortcuts for functions in editor toolbar
   (Merged from trunk Rev. 93)
+* Implemented: possibility to opt out of __setDisabled in custom TinyMCE plugins using settings.ezPlugin, patch by stevo
+  (Merged from trunk Rev. 95)
 
 5.0.3
 * Fixed #14935: Small typo at design.ini.append.php
